fix: fix spacing in paragraphs

--- a/styles/index.css
+++ b/styles/index.css
@@ -654,6 +654,11 @@ video {
   padding: 0.75rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
